--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>de.neuroevolution</groupId>
     <artifactId>near</artifactId>
-    <version>2.1</version>
+    <version>0.1-SNAPSHOT</version>
     <name>NEAR</name>
     <packaging>pom</packaging>
 
