--- a/near-worker/pom.xml
+++ b/near-worker/pom.xml
@@ -8,7 +8,7 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
     <groupId>de.neuroevolution</groupId>
-    <artifactId>NEAR-worker</artifactId>
+    <artifactId>near-worker</artifactId>
     <version>0.1-SNAPSHOT</version>
     <packaging>jar</packaging>
     <properties>
